--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -1,395 +1,24 @@
-about-time==3.1.1
-absl-py==2.1.0
-accelerate==1.9.0
-aiohappyeyeballs==2.4.4
-aiohttp==3.11.11
-aiosignal==1.3.2
-alive-progress==2.4.1
-altair==5.5.0
-anaconda-anon-usage @ file:///C:/b/abs_c3w_h1zzjg/croot/anaconda-anon-usage_1710965204622/work
-annotated-types==0.7.0
-anyio==3.7.1
-arabic-reshaper==3.0.0
-archspec @ file:///croot/archspec_1709217642129/work
-argon2-cffi==23.1.0
-argon2-cffi-bindings==21.2.0
-arrow==1.3.0
-astroid==3.3.8
-asttokens==3.0.0
-astunparse==1.6.3
-async-generator==1.10
-async-lru==2.0.4
-attrs==24.3.0
-av==15.1.0
-awscli==1.39.0
-babel==2.16.0
-backoff==2.2.1
-bcrypt==4.3.0
-beautifulsoup4==4.12.3
-bleach==6.2.0
-blinker==1.9.0
-boltons @ file:///C:/Users/dev-admin/perseverance-python-buildout/croot/boltons_1699480450092/work
-botocore==1.38.0
-Brotli @ file:///C:/b/abs_3d36mno480/croot/brotli-split_1714483178642/work
-build==1.3.0
-buildozer==1.5.0
-cachetools==5.5.2
-certifi==2025.7.14
-cffi @ file:///C:/b/abs_90yq4lmu83/croot/cffi_1726856448345/work
-chardet==3.0.4
-charset-normalizer @ file:///croot/charset-normalizer_1721748349566/work
-chromadb==1.0.20
-click==8.2.1
-cloudpickle==2.2.1
-cmake==3.31.0.1
-codecarbon==3.0.4
-colorama @ file:///C:/Users/dev-admin/perseverance-python-buildout/croot/colorama_1699472650914/work
-coloredlogs==15.0.1
-comm==0.2.2
-comtypes==1.4.10
-conda @ file:///D:/bld/conda_1736460255649/work
-conda-content-trust @ file:///C:/b/abs_bdfatn_wzf/croot/conda-content-trust_1714483201909/work
-conda-libmamba-solver @ file:///croot/conda-libmamba-solver_1727775630457/work/src
-conda-package-handling @ file:///C:/b/abs_831_pypuuz/croot/conda-package-handling_1718138287790/work
-conda_package_streaming @ file:///C:/b/abs_fe6zb0_j8_/croot/conda-package-streaming_1718136098642/work
-contourpy==1.3.1
-cryptography @ file:///C:/b/abs_35g500qir4/croot/cryptography_1724940575116/work
-cuda-python==12.6.2.post1
-cycler==0.12.1
-databutton==0.27.7
-databutton-web==0.16.0
-dataclasses-json==0.6.7
-datasets==3.2.0
-debugpy==1.8.11
-decorator==5.1.1
-deep-translator==1.11.4
-defusedxml==0.7.1
-dill==0.3.8
-distlib==0.3.9
-distro @ file:///C:/b/abs_71xr36ua5r/croot/distro_1714488282676/work
-dlib==19.24.6
-docutils==0.19
-durationpy==0.10
-eval_type_backport==0.2.2
-exceptiongroup @ file:///home/conda/feedstock_root/build_artifacts/exceptiongroup_1746947292760/work
-executing==2.1.0
-faiss-cpu==1.12.0
-fastapi==0.116.1
-fastjsonschema==2.21.1
-feedparser==6.0.11
-fief-client==0.20.0
-filelock==3.16.1
-filetype==1.2.0
-Flask==3.1.0
-flask-cors==5.0.1
-flatbuffers==24.3.25
-fonttools==4.55.0
-fpdf2==2.8.4
-fqdn==1.5.1
-frozendict @ file:///C:/b/abs_2alamqss6p/croot/frozendict_1713194885124/work
-frozenlist==1.5.0
-fsspec==2024.9.0
-gast==0.6.0
-gevent==24.11.1
-geventhttpclient==2.3.3
-gitdb==4.0.12
-GitPython==3.1.44
-google-ai-generativelanguage==0.6.18
-google-api-core==2.25.1
-google-api-python-client==2.176.0
-google-auth==2.40.3
-google-auth-httplib2==0.2.0
-google-cloud-vision==3.10.2
-google-generativeai==0.8.5
-google-pasta==0.2.0
-googleapis-common-protos==1.70.0
-grapheme==0.6.0
-greenlet==3.1.1
-grpcio==1.73.1
-grpcio-status==1.71.2
-gTTS==2.5.4
-gunicorn==23.0.0
-h11 @ file:///home/conda/feedstock_root/build_artifacts/h11_1745526374115/work
-h2==3.2.0
-h5py==3.13.0
-hpack==3.0.0
-hstspreload==2025.1.1
-htbuilder==0.6.2
-httpcore==1.0.9
-httplib2==0.22.0
-httptools==0.6.4
-httpx==0.27.2
-httpx-sse==0.4.1
-huggingface-hub==0.34.4
-humanfriendly==10.0
-hyperframe==5.2.0
-idna==2.10
-importlib_metadata==8.7.0
-importlib_resources==6.5.2
-invoke==2.2.0
-ipykernel==6.29.5
-ipython==8.31.0
-isoduration==20.11.0
-isort==6.0.0
-itsdangerous==2.2.0
-jedi==0.19.2
-Jinja2==3.1.4
-jiter==0.10.0
-jmespath==1.0.1
-joblib==1.4.2
-json5==0.10.0
-jsonpatch @ file:///C:/b/abs_4fdm88t7zi/croot/jsonpatch_1714483974578/work
-jsonpointer==2.1
-jsonschema==4.23.0
-jsonschema-specifications==2024.10.1
-jupyter-events==0.11.0
-jupyter-lsp==2.2.5
-jupyter_client==8.6.3
-jupyter_core==5.7.2
-jupyter_server==2.15.0
-jupyter_server_terminals==0.5.3
-jupyterlab==4.3.4
-jupyterlab_pygments==0.3.0
-jupyterlab_server==2.27.3
-jwcrypto==1.5.6
-kaggle==1.7.4.2
-keras==3.11.3
-Kivy==2.3.1
-kivy-deps.angle==0.4.0
-kivy-deps.glew==0.3.1
-Kivy-Garden==0.1.5
-kivy_deps.sdl2==0.8.0
-kiwisolver==1.4.7
-kubernetes==33.1.0
-langchain==0.3.27
-langchain-community==0.3.29
-langchain-core==0.3.75
-langchain-google-genai==2.1.10
-langchain-text-splitters==0.3.9
-langdetect==1.0.9
-langsmith==0.4.18
-libclang==18.1.1
-libmambapy @ file:///C:/b/abs_aam1usey89/croot/mamba-split_1725563515831/work/libmambapy
-llvmlite==0.43.0
-lxml==6.0.1
-Markdown==3.7
-markdown-it-py==3.0.0
-MarkupSafe==3.0.2
-marshmallow==3.26.1
-matplotlib==3.9.2
-matplotlib-inline==0.1.7
-mccabe==0.7.0
-mdurl==0.1.2
-menuinst @ file:///C:/b/abs_76jwd47ck1/croot/menuinst_1723567618942/work
-mistralai==1.9.9
-mistune==3.0.2
-ml_dtypes==0.5.3
-mmh3==5.2.0
-more-itertools==10.7.0
-mpmath==1.3.0
-multidict==6.1.0
-multiprocess==0.70.16
-mypy==1.15.0
-mypy-extensions==1.0.0
-namex==0.0.8
-narwhals==2.2.0
-nbclient==0.10.2
-nbconvert==7.16.4
-nbformat==5.10.4
-nemo_toolkit==2.0.0
-nest-asyncio==1.6.0
-networkx==3.4.2
-notebook==7.3.2
-notebook_shim==0.2.4
-numba==0.60.0
-numpy==1.26.4
-nvidia-ml-py==13.580.65
-oauthlib==3.3.1
-onnx==1.17.0
-onnx-tf==1.6.0
-onnxruntime==1.20.1
-onnxslim==0.1.39
-openai==0.28.1
-opencv-python==4.11.0.86
-opentelemetry-api==1.36.0
-opentelemetry-exporter-otlp-proto-common==1.36.0
-opentelemetry-exporter-otlp-proto-grpc==1.36.0
-opentelemetry-proto==1.36.0
-opentelemetry-sdk==1.36.0
-opentelemetry-semantic-conventions==0.57b0
-opt_einsum==3.4.0
-optree==0.14.1
-orjson==3.11.3
-outcome @ file:///home/conda/feedstock_root/build_artifacts/outcome_1733406188332/work
-overrides==7.7.0
-packaging @ file:///C:/b/abs_c3vlh0z4jw/croot/packaging_1720101866539/work
-pandas==2.2.3
-pandocfilters==1.5.1
-parso==0.8.4
-pexpect==4.9.0
-pillow==11.0.0
-pillow-avif-plugin==1.4.6
-platformdirs @ file:///C:/Users/dev-admin/perseverance-python-buildout/croot/platformdirs_1701797392447/work
-pluggy @ file:///C:/Users/dev-admin/perseverance-python-buildout/croot/pluggy_1699472504117/work
-posthog==5.4.0
-prometheus_client==0.21.1
-prompt_toolkit==3.0.48
-propcache==0.2.1
-proto-plus==1.26.1
-protobuf==5.29.5
-psutil==7.0.0
-ptyprocess==0.7.0
-pure_eval==0.2.3
-py-cpuinfo==9.0.0
-pyarrow==18.1.0
-pyasn1==0.6.1
-pyasn1_modules==0.4.2
-pybase64==1.4.2
-pybind11==2.13.6
-pycosat @ file:///C:/b/abs_5csdern___/croot/pycosat_1714513102923/work
-pycparser @ file:///tmp/build/80754af9/pycparser_1636541352034/work
-pydantic==2.11.7
-pydantic-settings==2.10.1
-pydantic_core==2.33.2
-pydeck==0.9.1
-pydub==0.25.1
-Pygments==2.18.0
-PyJWT==2.10.1
-pylint==3.3.4
-pynvml==13.0.1
-pyparsing==3.2.0
-pypdf==6.0.0
-PyPDF2==3.0.1
-PyPika==0.48.9
-pypiwin32==223
-pyproject_hooks==1.2.0
-PyQt5==5.15.11
-PyQt5-Qt5==5.15.2
-PyQt5_sip==12.16.1
-pyreadline3==3.5.4
-pyserial==3.5
-PySocks @ file:///C:/Users/dev-admin/perseverance-python-buildout/croot/pysocks_1699473336188/work
-pytesseract==0.3.13
-python-bidi==0.6.6
-python-dateutil==2.9.0.post0
-python-docx==1.2.0
-python-dotenv==1.1.1
-python-json-logger==3.2.1
-python-multipart==0.0.20
-python-rapidjson==1.20
-python-slugify==8.0.4
-pyttsx3==2.98
-pytz==2024.2
-pywin32==308
-pywinpty==2.0.14
-PyYAML==6.0.2
-pyzmq==26.2.0
-questionary==2.1.1
-qwen-vl-utils==0.0.11
-RapidFuzz==3.14.0
-referencing==0.35.1
-regex==2024.11.6
-replicate==0.13.0
-reportlab==4.2.5
-requests==2.32.5
-requests-oauthlib==2.0.0
-requests-toolbelt==1.0.0
-rfc3339-validator==0.1.4
-rfc3986==1.5.0
-rfc3986-validator==0.1.1
-rich==13.9.4
-rpds-py==0.22.3
-rsa==4.7.2
-ruamel.yaml @ file:///C:/b/abs_0cunwx_ww6/croot/ruamel.yaml_1727980181547/work
-ruamel.yaml.clib @ file:///C:/b/abs_5fk8zi6n09/croot/ruamel.yaml.clib_1727769837359/work
-s3transfer==0.12.0
-safetensors==0.4.5
-schedule==1.2.2
-scikit-learn==1.6.0
-scipy==1.14.1
-seaborn==0.13.2
-selenium @ file:///home/conda/feedstock_root/build_artifacts/bld/rattler-build_selenium_1755019333/work
-Send2Trash==1.8.3
-sentence-transformers==5.1.0
-sentencepiece @ file:///D:/bld/sentencepiece-split_1751790871089/work/python
-sentry-sdk==1.11.1
-setuptools==75.5.0
-sgmllib3k==1.0.0
-sh==2.2.1
-shellingham==1.5.4
-six==1.16.0
-smmap==5.0.2
-sniffio @ file:///home/conda/feedstock_root/build_artifacts/sniffio_1733244044561/work
-sortedcontainers @ file:///home/conda/feedstock_root/build_artifacts/sortedcontainers_1738440353519/work
-soupsieve==2.6
-SpeechRecognition==3.14.3
-SQLAlchemy==2.0.43
-stack-data==0.6.3
-starlette==0.47.3
-streamlit==1.48.1
-sympy==1.13.3
-tenacity==9.1.2
-tensorboard==2.20.0
-tensorboard-data-server==0.7.2
-tensorflow==2.20.0
-tensorflow-cpu==2.16.1
-tensorflow-intel==2.16.1
-termcolor==2.3.0
-terminado==0.18.1
-tesseract==0.1.3
-text-unidecode==1.3
-tflite-support==0.1.0a1
-thonny==4.1.7
-thop==0.1.1.post2209072238
-threadpoolctl==3.5.0
-tiktoken==0.11.0
-tinycss2==1.4.0
-tokenizers==0.22.0
-toml==0.10.2
-tomlkit==0.13.2
-torch==2.8.0+cpu
-torchaudio==2.8.0+cpu
-torchvision==0.23.0+cpu
-tornado==6.4.2
-tqdm @ file:///C:/b/abs_77wju137gk/croot/tqdm_1724853945787/work
-traitlets==5.14.3
-transformers==4.56.1
-trio==0.21.0
-trio-websocket @ file:///home/conda/feedstock_root/build_artifacts/bld/rattler-build_trio-websocket_1740493956/work
-tritonclient==2.52.0
-truststore @ file:///C:/Users/dev-admin/perseverance-python-buildout/croot/truststore_1701881385424/work
-typer==0.17.4
-types-python-dateutil==2.9.0.20241206
-typing-inspect==0.9.0
-typing-inspection==0.4.0
-typing_extensions==4.12.2
-tzdata==2024.2
-ultralytics==8.3.114
-ultralytics-thop==2.0.12
-uri-template==1.3.0
-uritemplate==4.2.0
-urllib3 @ file:///home/conda/feedstock_root/build_artifacts/urllib3_1750271362675/work
-uvicorn==0.20.0
-virtualenv==20.29.1
-watchdog==6.0.0
-watchfiles==0.18.1
-watchgod==0.8.2
-wcwidth==0.2.13
-webcolors==24.11.1
-webencodings==0.5.1
-websocket-client @ file:///home/conda/feedstock_root/build_artifacts/websocket-client_1733157342724/work
-websockets==10.4
-Werkzeug==3.1.3
-wget==3.2
-wheel==0.45.0
-wikipedia==1.4.0
-win-inet-pton @ file:///C:/Users/dev-admin/perseverance-python-buildout/croot/win_inet_pton_1699472992992/work
-wrapt==1.17.0
-wsproto @ file:///home/conda/feedstock_root/build_artifacts/wsproto_1733060193308/work
-xxhash==3.5.0
-yarl==1.18.3
-yaspin==3.1.0
-zipp==3.23.0
-zope.event==5.0
-zope.interface==7.2
-zstandard==0.23.0
+
+fastapi
+uvicorn
+langchain
+langchain-community
+langchain-huggingface
+faiss-cpu
+chromadb
+selenium
+webdriver-manager
+beautifulsoup4
+requests
+langdetect
+python-docx
+PyPDF2
+torch
+transformers
+mistralai
+google-generativeai
+sentence-transformers
+pillow
+pytesseract
+pydantic
+python-dotenv
